--- a/errores/error500.html
+++ b/errores/error500.html
@@ -5,7 +5,7 @@
     <title>Error 500 - Error Interno del Servidor</title>
 </head>
 <body>
-    <h1>¡Oops! Algo salió mal en el servidor.</h1>
-    <p>Estamos trabajando para solucionarlo. Por favor, intenta nuevamente más tarde.</p>
+    <h1>Error 500.</h1>
+    <p>Algo salió mal......</p>
 </body>
 </html>
